# status-desktop

./: .gitignore  I18N.md  Makefile  conanfile.py
app/: CMakeLists.txt
app/src/: main.cpp
ci/: Jenkinsfile.linux  Jenkinsfile.linux-cpp  Jenkinsfile.macos  Jenkinsfile.windows
ci/cpp/: Dockerfile-linux
libs/: CMakeLists.txt
libs/Core/: CMakeLists.txt
libs/Core/src/Core/: CMakeLists.txt  Conversions.cpp  Conversions.h  StaticUserConfiguration.cpp  StaticUserConfiguration.h  UserConfiguration.cpp  UserConfiguration.h
libs/Helpers/: CMakeLists.txt
libs/Helpers/src/Helpers/: Singleton.h  helpers.h
libs/Onboarding/: CMakeLists.txt
libs/Onboarding/qml/Status/Onboarding/: ConfirmPasswordPage.qml  CreatePasswordPage.qml  LoginView.qml  OnboardingView.qml  SetUserNameAndPicturePage.qml  WelcomeView.qml
libs/Onboarding/src/Onboarding/: CMakeLists.txt  NewAccountController.cpp  NewAccountController.h  OnboardingController.cpp  OnboardingController.h  OnboardingModule.cpp  OnboardingModule.h  UserAccount.cpp  UserAccount.h  UserAccountsModel.cpp  UserAccountsModel.h
libs/Onboarding/tests/: CMakeLists.txt  ServiceMock.h  test_AccountService.cpp  test_LoginController.cpp  test_OnboardingModule.cpp
libs/Onboarding/tests/OnboardingTestHelpers/: CMakeLists.txt  Constants.h  LocalAccountsSettings.cpp  LocalAccountsSettings.h  ScopedTestAccount.cpp  ScopedTestAccount.h  ServiceInterfaceTestData.cpp  ServiceInterfaceTestData.h
libs/Onboarding/tests/qml_tests/: CMakeLists.txt  tst_OnboardingController.qml
libs/StatusGoQt/: CMakeLists.txt
libs/StatusGoQt/src/StatusGo/: CMakeLists.txt  General.h  SignalsManager.cpp  SignalsManager.h  Utils.cpp  Utils.h
libs/StatusGoQt/src/StatusGo/Accounts/: Accounts.cpp  Accounts.h
libs/StatusGoQt/src/StatusGo/Wallet/: WalletAccount.h  WalletAccounts.cpp  WalletAccounts.h  WalletToken.h
libs/StatusQ/tests/: CMakeLists.txt
libs/Wallet/: CMakeLists.txt
src/: nim_status_client.nim
src/app/boot/: app_controller.nim
src/app/chat/views/: channels_list.nim  chat_item.nim  communities.nim
src/app/modules/main/: controller.nim  io_interface.nim  module.nim  view.nim
src/app/modules/shared_models/: active_section.nim  member_item.nim  member_model.nim  message_model.nim  section_item.nim  section_model.nim  user_item.nim  user_model.nim
src/app_service/common/: network_constants.nim
src/app_service/service/accounts/: service.nim
src/app_service/service/bookmarks/: service.nim
src/app_service/service/community/: service.nim
src/app_service/service/contacts/: dto.nim  service.nim
src/app_service/service/devicesync/: service.nim  service_interface.nim
src/app_service/service/eth/: service.nim
src/app_service/service/keycard/: service.nim
src/app_service/service/network/: dto.nim
src/app_service/service/node_configuration/: service.nim
src/app_service/service/settings/: service.nim  service_interface.nim
src/app_service/service/stickers/: async_tasks.nim  service.nim
src/app_service/service/wallet_account/: service.nim
src/backend/: backend.nim  browser.nim  communities.nim  node_config.nim
src/status/: chat.nim
src/status/chat/: chat.nim
src/status/libstatus/: chat.nim
src/status/signals/: core.nim  messages.nim
test/libs/StatusGoQt/: CMakeLists.txt  test_accounts.cpp  test_messaging.cpp  test_wallet.cpp
ui/: main.qml  nim-status-client.pro
ui/app/: AppMain.qml
ui/app/AppLayouts/Browser/: BrowserLayout.qml
ui/app/AppLayouts/Chat/: ChatLayout.qml  CommunityColumn.qml  ContactsColumn.qml
ui/app/AppLayouts/Onboarding/: OnboardingLayout.qml
ui/app/AppLayouts/Profile/: ProfileLayout.qml
ui/app/AppLayouts/WalletV2/: WalletHeader.qml  WalletV2Layout.qml
ui/app/AppLayouts/stores/: MessageStore.qml  RootStore.qml
ui/app/mainui/: AppMain.qml
ui/i18n/: base.ts  qml_ar.qm  qml_ar.ts  qml_de.qm  qml_de.ts  qml_en.qm  qml_en.ts  qml_es.qm  qml_es.ts  qml_fil.qm  qml_fil.ts  qml_fr.qm  qml_fr.ts  qml_id.qm  qml_id.ts  qml_it.qm  qml_it.ts  qml_ko.qm  qml_ko.ts  qml_pt_BR.qm  qml_pt_BR.ts  qml_ru.qm  qml_ru.ts  qml_tr.qm  qml_tr.ts  qml_ur.qm  qml_ur.ts  qml_zh.qm  qml_zh.ts  qml_zh_TW.qm  qml_zh_TW.ts
ui/imports/shared/controls/: ContactsListAndSearch.qml  EmojiHash.qml  GasSelector.qml  GasValidator.qml  Input.qml
ui/imports/shared/panels/: BalanceValidator.qml
ui/imports/shared/popups/: ProfilePopup.qml  QrScanPopup.qml  SendContactRequestModal.qml  SendModal.qml  SignTransactionModal.qml  qmldir
ui/imports/shared/status/: StatusChatImageLoader.qml  StatusChatInput.qml  StatusETHTransactionModal.qml  StatusEmojiSection.qml  StatusNotification.qml  StatusSNTTransactionModal.qml  StatusStickerButton.qml  StatusStickersPopup.qml
ui/imports/shared/views/: NetworkCardsComponent.qml  NetworkSelector.qml  NetworksAdvancedCustomRoutingView.qml  NetworksSimpleRoutingView.qml  SearchResults.qml  SendModalFooter.qml  SendModalHeader.qml  TabAddressSelectorView.qml  TabNetworkAndFees.qml
ui/imports/utils/: Constants.qml  Global.qml  Utils.qml
ui/shared/views/: NoFriendsRectangle.qml
(+193 files in other folders)
